--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
                 </div>
             </div>
             <div class="main">
-                <div class="info">stuff</div>
+                <div class="info"></div>
                 <div class="map">
                     <div id="map"></div>
                 </div>
             </div>
-            <div class="footer">placeholder</div>
+            <div class="footer">(C) zeka-mashi</div>
         </div>
     </body>
 </html>
